--- a/message in a bottle/home.html
+++ b/message in a bottle/home.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Message in a Bottle</title>
+		<link rel="shortcut icon" href="Favicon.png">
+		<link rel="icon" type="image/png" href="Favicon.png">
     <link rel="stylesheet" href="style.css"/>
 	</head>
   <body>
@@ -9,8 +11,8 @@
     <br><br><br>
     <img src="bottle.png" id="bottle">
     <br><br>
-    <div id="about">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">ABOU<span>T</span></a></div>
-    <div id="about"><a href="send.html">SEN<span>D</span></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div>
+    <div id="about"><span id="space"></span><a href="about.html">ABOU<span>T</span></a></div>
+    <div id="about"><a href="send.html">SEN<span>D</span></a><span id="space"></span></div>
     <div id="lovespace"></div>
     <div id="love"><a href="https://ewonrael.github.io/"><img src="love.svg"></a></div>
   </body>
