prior answers not displaying

--- a/message in a bottle/load.html
+++ b/message in a bottle/load.html
@@ -15,7 +15,7 @@
 		setTimeout('del()', 14000);
 		</script>
 	</head>
-  <body>
+  <body onload="display();">
 		<div id="alert">
 			<div id="alertext">
 				<a id="ex" onclick="buttono()">X</a><br>
