--- a/index.html
+++ b/index.html
@@ -11,6 +11,61 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "apparently graphic design we still call graphic design to this day",
+		      "oh so you're from california? my brother's ex girlfriend's dad had a business partner that used to live in california before he moved to avoid paying taxes I think his name was gus or gary or greg or something...<br><br>you didn't happen to know him did you?",
+		      "pay no attention to the capitalist behind the curtain",
+		      "the public don't know what they want and neither do I",
+		      "goodbye for now USA 🇺🇸❤️",
+		      "hey I just woke up now and I have possibilities!<br><br>boy being alive can be bothersome",
+		      "sunshine I miss you already you are more brave and powerful and capable than you realize and although separating is painful for the both of us I hope it helps you to realize that the strength you felt when we were together was always your own and not mine I love you so much",
+		      "show me a picture of a man looking solum in the same room as a dishwasher (the machine not employee)!",
+		      "I identify as an NPC",
+		      "I didn't like the book kite runner",
+		      "Wow! You can learn a lot by reading!",
+		      "thank you lakeside ♥️",
+		      "the world isn't evil because we were too loving to those that are undeserving",
+		      "the phantom pavilion exists I've seen it",
+		      "I'm not god, but I do drive all over the place",
+		      "the weeds growing all over this whole foods reveal that it is not the fantasy of an independently owned, cultivated place but infact corporate, suburban, and heartless",
+		      "my mom's named Chris and my dad's named Chris and I have all sorts of other relatives and they all have names too",
+		      "god: *creates earth*<br><br>humans: *destroys earth by burning fossil fuels and fracking*<br><br>god: *increases ocean levels, increases natural disasters, makes earthquakes where people frack*<br><br>humans: &ldquo;I literally refuse to accept these things are happening&rdquo;",
+		      "like and retweet to raise awareness",
+		      "the dead have risen and they wish to speak to the manager",
+		      "I think the manufacturers of those potato powered clocks are in the pocket of big potato",
+		      "the stringman is cometh",
+		      "I just had the great idea that there should be a word for when you remember something but think it's an original idea. Like incrypto-nesia or something IDK",
+		      "I've never watched the office before but I assume if I did I'd recognize all the scenes because of the memes",
+		      "what's this nonsense with Billie and Justin not into it",
+		      "why should the government listen to God when he spends most of his year in a tax haven?",
+		      "I am real<br><br>and I have a puppet",
+		      "get out of here fairy tail book, I wish I never wrote you",
+		      "I wouldn't be caught dead with a pulse!!",
+		      "that's such a virgo thing, not believing in astrology",
+		      "looking to buy an espresso machine tonight! Meet me at the Kohl's on Wadsworth",
+		      "DaVinci must have exercised dominance over a goth cowboy's abs",
+		      "if this magazine has so many issues maybe they should stop making it",
+		      "in my advanced age I can carry as many as six spoons in one hand",
+		      "how do I know if someone's really a cop and not just an operative working on behalf of the government in an costume?",
+		      "divorce can be tough on a marriage",
+		      "sometimes I get bad ideas",
+		      "...maybe we should outlaw tipping",
+		      "I hope no one cuts their leg off in my presence. That would be very upsetting.",
+		      "someone gave me a fishing rod a year ago and I still haven't finished eating it",
+		      "can good art be made by good people?",
+		      "who hasn't drunk called Peter Lorre at some point in their life?",
+		      "feic",
+		      "ponchos is torso skirts",
+		      "a museum is a retirement home for objects",
+		      "is it funny because I laughed or did I laugh because it's funny?",
+		      "everything is music",
+		      "yeah I heard about ants, they made a movie about them",
+		      "I honestly enjoy going to the dentist",
+		      "until the bourgeoisie is vanquished and its hamburgers are completely confiscated, the proletariat must, without fail, possess a military force",
+		      "Bess & George are totes gay for each other",
+		      "the egg is its own bag",
+		      "yoda, the pesky elf",
+		      "me: *wants to do something*<br><br>life: &ldquo;whoa, slow down there cowboy&rdquo;",
+		      "when other people tell you their pet peeves so you become sensitive to them in order to make them comfortable but then you become so sensitive that they become your pet peeves too and now everything annoys me but I don't want to say anything because saying something's a pet peeve",
 		      "I bet crayons is work well in space",
 		      "be the kind of person that has a lot of good icebreakers",
 		      "a white person being afraid of brown people is not the same as a brown person being afraid of white people",
@@ -624,7 +679,7 @@
 		      "I want to sleep in an aerated coffin.",
 		      "PRLBLEMS",
 		      "&quot;I don't always watch bot generated content from a nightmarish dystopia, but when I do, I want it to teach me colors.&quot;",
-		      "the stakes where hight, but not as hight as my auto insurance premiums",
+		      "the stakes where high, but not as high as my auto insurance premiums",
 		      "I can't tell if the world needs more or less horny teenagers",
 		      "I wonder how many times the world has ended",
 		      "where is my screwdriver <br>?",
