--- a/index.html
+++ b/index.html
@@ -846,14 +846,14 @@
 	<p>
 		<b>Recent Activity</b>
 	</p>
-	 <p>
+	<p>
+		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/message%20in%20a%20bottle/home.html">Message in a Bottle</a>
 	</p>
 	<p>
 		<a href="https://indestructibletype.com/Bodoni.html">Bodoni*</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.bandcamp.com/album/im-harry-potter">I'm Harry Potter</a>
 	</p>
 	<br><br>
 	<p>
@@ -973,6 +973,9 @@
 	</p>
 	<p>
 		<a href="https://drive.google.com/uc?export=download&id=0B2aVNwXBM6rCa3hITnV0eE5RVVU">Realizations of Incomprehensible Music Movement II</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/Zeros/story">Zeros</a>
