--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	<title>Owen Earl Official Site</title>
 	<link rel="stylesheet" href="https://indestructibletype.com/fonts/fonts.css" type="text/css" charset="utf-8" />
-    	<link rel="stylesheet" href="style.css"/>
+    	<link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
 	<h1>Owen Earl</h1>
