--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		      "android is just a bunch of spyware in a trench coat masquerading as an operating system",
 		      "I'm an artist, like my father before me and his father before him",
 		      "Garfield is the enemy of the people",
-		      "Dutch cuisine is like one of those paintings from like 1412 where an artist tries to draw an elephant based solely on a description some explorer gave and it's just bad<br>like they're trying to cook hamburgers having never seen one themselves and relying on third hand information",
+		      "Dutch cuisine is like one of those paintings from like 1412 where an artist tries to draw an elephant based solely on a description some explorer gave and it's just bad<br><br>like they're trying to cook hamburgers having never seen one themselves and relying on third hand information",
 		      "petition to add the entire Beatles catalog into the public domain!",
 		      "I'm tired of paying rent I'm moving into Ikea",
 		      "I'm looking at the poster on my wall like they look at the camera in the office",
