--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "you say you don't like communism and yet you support the institution of marriage???",
 		      "whenever I hear a bell sound I think of Ivan Pavlov",
 		      "will someone please invent a fad diet that's just cheese and coffee and croissants thanks",
 		      "when I die put my corpse in a modern art museum",
