--- a/index.html
+++ b/index.html
@@ -895,13 +895,13 @@
 		<b>Recent Activity</b>
 	</p>
 	<p>
+		<a href="https://ewonrael.github.io/Playlist/HisRockingHorseRanAway.html">Playlist Concept</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/message%20in%20a%20bottle/home.html">Message in a Bottle</a>
-	</p>
-	<p>
-		<a href="https://indestructibletype.com/Bodoni.html">Bodoni*</a>
 	</p>
 	<br><br>
 	<p>
@@ -1011,6 +1011,9 @@
 	</p>
 	<p>
 		<a href="https://youtu.be/gCYURbW1o-E">The Naming of Creation</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.github.io/Playlist/HisRockingHorseRanAway.html">Playlist Concept</a>
 	</p>
 	<p>
 		<a href="https://youtu.be/lRrZ1-1bD5Y">Red Ribbon</a>
