--- a/index.html
+++ b/index.html
@@ -895,13 +895,13 @@
 		<b>Recent Activity</b>
 	</p>
 	<p>
+		<a href="https://ewonrael.github.io/AI-Tweets">AI Generated Tweets</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/Playlist/HisRockingHorseRanAway.html">Playlist Concept</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.github.io/message%20in%20a%20bottle/home.html">Message in a Bottle</a>
 	</p>
 	<br><br>
 	<p>
@@ -996,6 +996,9 @@
 	</p>
 	<p>
 		<a href="https://www.youtube.com/watch?v=42o0ZpBYUdE&feature=youtu.be">Aesthetic Responses to Repetition in Unfamiliar Music</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.github.io/AI-Tweets">AI Generated Tweets</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/whatisarttoyou">Art According to Tinder</a>
