--- a/AI-Tweets.html
+++ b/AI-Tweets.html
@@ -9,9 +9,9 @@
   <div style="width: 498px; position: absolute; left: 0; right: 0; margin-left: auto; margin-right: auto; margin-top: 20vh; border: 1px solid #e6e6e6;
   border-radius: 6px;">
     <img src="tweet-top.png" style="width: 492px; margin: 3px;">
-    <p id="tweet" style="font-family: sans; margin: 0 20px 3px 20px; line-height: 1.5;"></p>
+    <p id="tweet" style="font-family: sans-serif; margin: 0 20px 3px 20px; line-height: 1.5;"></p>
     <img src="tweet-bottom.png" style="width: 492px; margin: 3px;">
-    <p id="date" style="font-family: sans; font-size: 14px; margin: -33px 20px 10px 42px; color: #666666;">2 &nbsp; 4:13 PM · Feb 18, 2020</p>
+    <p id="date" style="font-family: sans-serif; font-size: 14px; margin: -33px 20px 10px 42px; color: #666666;">2 &nbsp; 4:13 PM · Feb 18, 2020</p>
     <hr style="border: 0.5px solid #e6e6e6">
     <button onClick="window.location.reload()" style="width: 498px; cursor: pointer; border: none; background-color: white; font-size: 14px; color: #2b7bb9; margin-bottom: 10px;">Generate a new Tweet</button>
   </div>
@@ -5142,6 +5142,6 @@ var month = [
         document.getElementById("date").innerHTML = (Math.floor(Math.random() * 10) + 1) + " &nbsp; " + (Math.floor(Math.random() * 12) + 1) + ":" + (Math.floor(Math.random() * 49) + 10) + ampm[Math.floor(Math.random()*2)] + month[Math.floor(Math.random()*12)] + (Math.floor(Math.random() * 29) + 1) + ", " + (Math.floor(Math.random() * 4) + 2016);
     })();
 </script>
-<p style="width: 156px; position: absolute; left: 0; right: 0; margin-left: auto; margin-right: auto; bottom: 0.2em; padding: 0;"><a href="https://ewonrael.github.io/" style="color: #888; font-size: 12px; font-family: sans; text-decoration: none;">Made with love by Owen Earl</a></p>
+<p style="width: 156px; position: absolute; left: 0; right: 0; margin-left: auto; margin-right: auto; bottom: 0.2em; padding: 0;"><a href="https://ewonrael.github.io/" style="color: #888; font-size: 12px; font-family: sans-serif; text-decoration: none;">Made with love by Owen Earl</a></p>
   </body>
 </html>
