--- a/fluxus.html
+++ b/fluxus.html
@@ -9,7 +9,8 @@
 	<h1>Owen Earl</h1>
 	<h2 id="tweet"></h2>
   	<script>
-var tweets = [
+(function() {
+	      var tweets = [
 "You are a therapist and this is your patient.",
 "This conversation is being broadcast live on the radio.",
 "You suspect the person you are talking to is an alien impersonating a human.",
