--- a/fluxus.html
+++ b/fluxus.html
@@ -22,7 +22,7 @@
 "You are trying to sell the other person liquid soap, and are using as many opportunities to explain the benefits of liquid soap as possible.",
 "Everything you say must be dishonest, but try to make it sound true.",
 "Everything you say must be an obvious lie.",
-"You mustn’t use the letter “e”",
+"You mustn’t use the letter <q>e</q>",
 "Everything this person says or does, try to say or do better",
 "You honestly have never heard of anything this person mentions.",
 "You’re intoxicated and trying to hide this fact.",
@@ -42,7 +42,7 @@
 "You are the good cop in a good cop/bad cop style interrogation",
 "Be an asshole",
 "You are an actor and this is a scene in a movie. This is the 87th take, and you are sick of every part of this.",
-"Try and get the other person to say the word “spoon,” without saying it yourself.",
+"Try and get the other person to say the word <q>spoon</q> without saying it yourself.",
 "This is a cheesy porno",
 "Only ask questions.",
 "Try and be as helpful as possible.",
@@ -54,12 +54,12 @@
 "Confront the other person about their drinking problem.",
 "Keep making freudian slips.",
 "The cops are coming soon and you need this other person to act cool when they arrive.",
-"No matter what the other person says, just sigh and say “that’s heavy man.”",
+"No matter what the other person says, just sigh and say <q>that’s heavy man.</q>",
 "The other person is a waiter at a restaurant who has mistakenly brought you a steak you didn’t order for the 11th time in a row.",
 "You’re very openly racist.",
 "You’re an immature middle school boy.",
 "You’re a malfunctioning robot.",
-"You’re very sad about your recent break up with your boyfriend “Josh,” and everything the other person says reminds you of him.",
+"You’re very sad about your recent break up with your boyfriend Josh, and everything the other person says reminds you of him.",
 "This is a medieval interrogation.",
 "You don’t remember who the other person is or how to know them, but are too embarrassed to ask.",
 "The other person is a figment of your imagination.",
