--- a/fluxus.html
+++ b/fluxus.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>Owen Earl Official Site</title>
-	<link rel="stylesheet" href="https://indestructibletype.com/fonts/fonts.css" type="text/css" charset="utf-8" />
-    	<link rel="stylesheet" href="style.css"/>
+	<title>fluxus game for two</title>
   </head>
   <body>
-	<h1>Owen Earl</h1>
-	<h2 id="tweet"></h2>
+	<h1 id="tweet"></h1>
   	<script>
 (function() {
 	      var tweets = [
@@ -75,3 +72,4 @@
         	document.getElementById("tweet").innerHTML = tweets[i];
 	    })();
 	</script>
+<button onclick="location.reload();">new card</button>
