--- a/fluxus.html
+++ b/fluxus.html
@@ -2,6 +2,19 @@
 <html>
   <head>
 	<title>fluxus game for two</title>
+        <style>
+@font-face {
+    font-family: "type";
+    src: url("message%20in%20a%20bottle/underwood.ttf") format("truetype");
+    font-weight: 100;
+    font-style: normal;
+}
+
+h1 {
+    font-family: "type";
+    font-weight: 100;
+}
+        </style>
   </head>
   <body>
 	<h1 id="tweet"></h1>
