--- a/fluxus.html
+++ b/fluxus.html
@@ -13,7 +13,9 @@
 h1 {
     font-family: "type";
     font-weight: 100;
-    text-align: center;
+    width: 80%;
+    margin-left: 10%;
+    font-size: 26pt;
 }
         </style>
   </head>
