--- a/fluxus.html
+++ b/fluxus.html
@@ -63,7 +63,7 @@ h1 {
 "You know that there are roughly 20 people hiding in this room, and in about 30 seconds they will jump out of hiding and yell “surprise!”",
 "Explain to the other person why they need to start being less selfish during sex.",
 "You’re in a library and need to keep the volume down.",
-"Explain world war two.",
+"Explain world war two (a subject you a both very knowable on and passionate about)",
 "Confront the other person about their drinking problem.",
 "Keep making freudian slips.",
 "The cops are coming soon and you need this other person to act cool when they arrive.",
