--- a/Sarabande/index.html
+++ b/Sarabande/index.html
@@ -6,43 +6,43 @@
 </head>
 <body>
   <div id="c1" class="hi">
-    <span onclick="Pall('1/1.wav')">g</span><span onclick="Pall('1/2.wav')">b</span><span onclick="Pall('1/3.wav')">e</span><span onclick="Pall('1/4.wav')">j</span><span onclick="Pall('1/5.wav')">e</span><span onclick="Pall('1/6.wav')">j</span>
-  <div class="bottom" onclick="Pall('1/all.wav')">
+    <span onclick="Pall('1/1.mp3')">g</span><span onclick="Pall('1/2.mp3')">b</span><span onclick="Pall('1/3.mp3')">e</span><span onclick="Pall('1/4.mp3')">j</span><span onclick="Pall('1/5.mp3')">e</span><span onclick="Pall('1/6.mp3')">j</span>
+  <div class="bottom" onclick="Pall('1/all.mp3')">
   </div>
   </div>
   <div id="c2" class="hi">
-    <span onclick="Pall('2/1.wav')">j</span><span onclick="Pall('2/2.wav')">e</span><span onclick="Pall('2/3.wav')">h</span><span onclick="Pall('2/4.wav')">a</span><span onclick="Pall('2/5.wav')">h</span><span onclick="Pall('2/6.wav')">a</span>
-    <div class="bottom" onclick="Pall('2/all.wav')">
+    <span onclick="Pall('2/1.mp3')">j</span><span onclick="Pall('2/2.mp3')">e</span><span onclick="Pall('2/3.mp3')">h</span><span onclick="Pall('2/4.mp3')">a</span><span onclick="Pall('2/5.mp3')">h</span><span onclick="Pall('2/6.mp3')">a</span>
+    <div class="bottom" onclick="Pall('2/all.mp3')">
   </div>
   </div>
   <div id="c3" class="hi">
-    <span onclick="Pall('3/1.wav')">a</span><span onclick="Pall('3/2.wav')">g</span><span onclick="Pall('3/3.wav')">j</span><span onclick="Pall('3/4.wav')">c</span><span onclick="Pall('3/5.wav')">j</span><span onclick="Pall('3/6.wav')">c</span>
-    <div class="bottom" onclick="Pall('3/all.wav')">
+    <span onclick="Pall('3/1.mp3')">a</span><span onclick="Pall('3/2.mp3')">g</span><span onclick="Pall('3/3.mp3')">j</span><span onclick="Pall('3/4.mp3')">c</span><span onclick="Pall('3/5.mp3')">j</span><span onclick="Pall('3/6.mp3')">c</span>
+    <div class="bottom" onclick="Pall('3/all.mp3')">
   </div>
   </div>
   <div id="c4" class="hi">
-    <span onclick="Pall('4/1.wav')">j</span><span onclick="Pall('4/2.wav')">e</span><span onclick="Pall('4/3.wav')">h</span><span onclick="Pall('4/4.wav')">a</span><span onclick="Pall('4/5.wav')">h</span><span onclick="Pall('4/6.wav')">a</span>
-    <div class="bottom" onclick="Pall('4/all.wav')">
+    <span onclick="Pall('4/1.mp3')">j</span><span onclick="Pall('4/2.mp3')">e</span><span onclick="Pall('4/3.mp3')">h</span><span onclick="Pall('4/4.mp3')">a</span><span onclick="Pall('4/5.mp3')">h</span><span onclick="Pall('4/6.mp3')">a</span>
+    <div class="bottom" onclick="Pall('4/all.mp3')">
   </div>
   </div>
   <div id="c5" class="hi">
-    <span onclick="Pall('5/1.wav')">g</span><span onclick="Pall('5/2.wav')">b</span><span onclick="Pall('5/3.wav')">e</span><span onclick="Pall('5/4.wav')">j</span><span onclick="Pall('5/5.wav')">e</span><span onclick="Pall('5/6.wav')">j</span>
-    <div class="bottom" onclick="Pall('5/all.wav')">
+    <span onclick="Pall('5/1.mp3')">g</span><span onclick="Pall('5/2.mp3')">b</span><span onclick="Pall('5/3.mp3')">e</span><span onclick="Pall('5/4.mp3')">j</span><span onclick="Pall('5/5.mp3')">e</span><span onclick="Pall('5/6.mp3')">j</span>
+    <div class="bottom" onclick="Pall('5/all.mp3')">
   </div>
   </div>
   <div id="c6" class="hi">
-    <span onclick="Pall('6/1.wav')">h</span><span onclick="Pall('6/2.wav')">l</span><span onclick="Pall('6/3.wav')">c</span><span onclick="Pall('6/4.wav')">g</span><span onclick="Pall('6/5.wav')">c</span><span onclick="Pall('6/6.wav')">g</span>
-    <div class="bottom" onclick="Pall('6/all.wav')">
+    <span onclick="Pall('6/1.mp3')">h</span><span onclick="Pall('6/2.mp3')">l</span><span onclick="Pall('6/3.mp3')">c</span><span onclick="Pall('6/4.mp3')">g</span><span onclick="Pall('6/5.mp3')">c</span><span onclick="Pall('6/6.mp3')">g</span>
+    <div class="bottom" onclick="Pall('6/all.mp3')">
   </div>
   </div>
   <div id="c7" class="hi">
-    <span onclick="Pall('7/1.wav')">l</span><span onclick="Pall('7/2.wav')">g</span><span onclick="Pall('7/3.wav')">c</span><span onclick="Pall('7/4.wav')">l</span><span onclick="Pall('7/5.wav')">g</span><span onclick="Pall('7/6.wav')">l</span>
-    <div class="bottom" onclick="Pall('7/all.wav')">
+    <span onclick="Pall('7/1.mp3')">l</span><span onclick="Pall('7/2.mp3')">g</span><span onclick="Pall('7/3.mp3')">c</span><span onclick="Pall('7/4.mp3')">l</span><span onclick="Pall('7/5.mp3')">g</span><span onclick="Pall('7/6.mp3')">l</span>
+    <div class="bottom" onclick="Pall('7/all.mp3')">
   </div>
   </div>
   <div id="c8" class="hi">
-    <span onclick="Pall('8/1.wav')">l</span><span onclick="Pall('8/2.wav')">c</span><span onclick="Pall('8/3.wav')">g</span><span onclick="Pall('8/4.wav')">l</span><span onclick="Pall('8/5.wav')">c</span><span onclick="Pall('8/6.wav')">g</span><span onclick="Pall('8/7.wav')">l</span>
-    <div class="bottom" onclick="Pall('8/all.wav')">
+    <span onclick="Pall('8/1.mp3')">l</span><span onclick="Pall('8/2.mp3')">c</span><span onclick="Pall('8/3.mp3')">g</span><span onclick="Pall('8/4.mp3')">l</span><span onclick="Pall('8/5.mp3')">c</span><span onclick="Pall('8/6.mp3')">g</span><span onclick="Pall('8/7.mp3')">l</span>
+    <div class="bottom" onclick="Pall('8/all.mp3')">
   </div>
   </div>
   <div id="play" class="hi" onclick="allPlay()">&#9654;</div>
