--- a/index.html
+++ b/index.html
@@ -11,6 +11,76 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "just because you're right doesn't mean I'm happy about it",
+		      "y'all ever drink fresh squeezed orange juice and think maybe there is a god and hope that maybe you'll find salvation and on that day your veins will flow with orange juice?",
+		      "I always like to ignore microwave the first time it does it's round of beeping, that way when it goes to the second round of beeping I feel very needed and wanted",
+		      "the good thing about my Twitter is that as I grow old and senile and the technology around me grows beyond my comprehension the quality of my tweets won't suffer at all",
+		      "IDK why it took me until recently to give up all hope in humanity; they made a movie out of the board game battleship when I was like 14 that should have clued me in",
+		      "Mr. Sandman<br>bring me a dream<br>for Christ's sake not the calamari one again it's all I dream about<br>the wine-red walls that ooze<br>I cannot see the cat but I know it is watching me<br>the calamari<br>the calamari<br>for six nights now I dream the calamari dream<br>Mr. Sandman make it stop",
+		      "I'm an artist, I'm a student, I'm an intellectual, but mostly, I'm disappointed",
+		      "I always pay for public transit because I'm a spineless coward",
+		      "someday I'm going to be the voice telling everyone to stand clear of the closing doors",
+		      "capitalism? more like crapitalism am I right?",
+		      "carolin bite line creationism",
+		      "IDK about you but I like to listen to YouTube videos with the sound ON",
+		      "the cafeteria has switched to biodegradable utensils but the only place to dispose of anything is garbage cans??",
+		      "a supersede is the best kind of seed",
+		      "once had a cop sincerely offer to arrest me for kicks and turning him down was one of my more cowardly moments",
+		      "phone= bad<br>hole= good",
+		      "&ldquo;man the soap tastes different here in Holland&rdquo; is something I MIGHT say, if I were someone who eats soap, WHICH I'M NOT, I'm just using my IMAGINATION to IMAGINE what someone who eats soap and also has an INCREDIBLY REFINED PALATE might say about the soap here in the Netherlands",
+		      "nyf<br>nife<br>knife<br>kniphe<br>knieghf<br>knieghph<br>dknieghph<br>dkniouxghph<br>dkniouxghphe<br>dkniouxghphegh<br>dknieouxldghphegh<br>gdknieouyxldghouypheigh<br>ghuxdknxgnpieouyxigldghoixeuypheighf",
+		      "to do list:<br><br>• shower while wearing socks<br>• eat microwaved lettuce<br>• tape scented pine cone to inside of shirt<br>• frozen sardines in underwear<br>• public marriage proposals<br>• smoke used coffee grounds instead of tobacco<br>• gargle yogurt with strawberry chunks<br>• give self hickey on inner elbow<br>• tape stethoscope to chest and listen to own heart while falling asleep<br>• think about self<br>• booger in ear<br>• sandpaper fingernails<br>• make bracelet out of own hair<br>• mayo in coffee<br>• put rubbing alcohol on nipples<br>• oatmeal facemask",
+		      "Michael Bloomberg is a wolf that pays off sheep around him to pretend like he's a sheep",
+		      "the Dutch are known for their ovens",
+		      "after much deliberation I'm proud to announce that &ldquo;52&rdquo; is the joke of this year",
+		      "I'm an adult and that means I get to buy foaming shaving cream and waste the entire can in one go in the shower",
+		      "I'm just picturing a cheese sandwich. What a hilarious concept! What does that even mean? Two pieces of bread with a cheese in the middle? Ha! That's not a sandwich! That's a cheese, inside a bread. Might as well put a pickle on a bread and call it an open face pickle sandwich.",
+		      "yeah I work for the FBI<br><br>F ederal<br>B ureau of<br>I nvestigation",
+		      "I love you for that",
+		      "I hate being bath eggs",
+		      "I have an idiot that we know nothing on my bees dishones a google",
+		      "buying all the gas station slim jims",
+		      "Apparently, if a joke gets a laugh it's a good joke no matter how offensive it is, so I'm planning on strapping my audience to chairs that tickle them after I say the most offensive stuff I can think of. No one will be able to deny that I'm a comedy genius.",
+		      "LPT: meat tenderizer can NOT be used as a muscle relaxant when in a pinch",
+		      "if I'm gonna get sores why can't they be of the dino variety?",
+		      "if people read candy wrappers instead of throwing them away they'd be spared a lot of illusions",
+		      "oh so you want to improve society somewhat?<br><br>Construct a theoretical, perfect society that doesn't have any hypothetical downfalls, the creation of which will not even mandate temporary discomfort for anyone, before I'll take you seriously",
+		      "I'm packing up my bags and moving to the 1970s",
+		      "they call me Johnny Two-Hands because I have two hands",
+		      "please sir, can I have some bootstraps?",
+		      "they don't tell you this is law school but you don't have to follow the recipe",
+		      "it is both easy and our moral obligation to take candy from babies because they shouldn't have refined sugar like that you know?",
+		      "guys I'm switching to an exclusively maroon wardrobe that way I can spill wine and bleed all over myself without having to spend 40 hours scrubbing every day",
+		      "food: $400<br>internet: $100<br>cowboy music videos: $10,000<br>rent: $600<br>misc: $150<br><br>someone who is good at the economy please help",
+		      "fluxus asmr",
+		      "types of boys:<br>sad boys<br>foot boys<br>milk boys",
+		      "o &nbsp;, the Pe &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; lican &nbsp;&nbsp;&nbsp;&nbsp; . &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; so smoothly &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; d &nbsp;o th<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;he &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; cr est . &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; a wi &nbsp;&nbsp;&nbsp; nd &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; go &nbsp;d &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!",
+		      "Sometimes I wish that an evil genie would turn me into a duck. He would think it's a curse and would maybe have some condition where I'll turn back into a boy if I find true-love's kiss or something, but ducks don't have to think about their outfits everyday and can fly.",
+		      "thank god milk is being recognized for the star it is",
+		      "Is there a word for the fetish where you want to hang out in the bed full of old people from the movie Willy Wonka and the Chocolate Factory?<br><br>(asking for a friend)",
+		      "don't ever talk to me or my son or my son's son or my son's son's son or the son of my son's son's son or his son or son's son or the son's son's son of his son son or his son or son's son or son's son's son or son's son's son's son or the son of his son's son's son's son again",
+		      "lullaby subtext be like:<br><br>kid, your energy levels have been at 4000% all day for the love of god take a break from doing a literal headstand in bed rn and let me watch The Bachelorette for 7 minutes before I pass out & wake to you shaking me at 5am because you dreamed of snakes",
+		      "possible subject matter of 1950s songs:<br><br>1. I'm in love and the person loves me back (happy)<br>2. I'm in love and the person does not love me back (sad)",
+		      "life is just a series of temporary solutions",
+		      "tech companies over-pay a select group of highly motivated, hardworking, problem solving types, to keep them from realizing the system's rigged and to bamboozle them into declawing their brain children",
+		      "CHEESE<br>pros: tasty<br>cons: ???",
+		      "things the liberals control: the academics<br><br>things the right-wingers control: the memes",
+		      "&ldquo;adults always think something's important if you have to pay for it&rdquo;<br><br>-wise words from D.W. Read",
+		      "people who tape over their laptop cameras but not their phone selfie camera are confused",
+		      "I'm so afraid of commitment that when it comes time to eat lunch I just think about what I want for two hours and end up filling up on snacks on accident",
+		      "low-key Michel Xhaard isn't a real person he's a persona invented by the NSA to spy on linux users",
+		      "I think American boys really can't seem to handle heterosexual sex in a healthy way right now, so I'm thinking a 5 year temporary ban, just so we can come up with some goals that aren't about boneing, like making bread or something.<br><br>I know women like having sex with men, and they aren't the ones screwing this up, and they always seem to get the short end of the stick with this kind of thing. Maybe we can import some nice Dutch boys to keep up with demand during this five year period while we sort things out.",
+		      "sometimes I see a meme that is full of references I don't get and I just smile because I'm happy that there's some hooligans out on the internet having fun with each other",
+		      "when you see people's computers and they have uTorrent installed and you think, wow it's so nice that this person has this tool for seeding Wikipedia articles and Linux distros and definitely nothing else or potentially incriminating",
+		      "it's amazing how we've achieved open borders for companies but not people",
+		      "looking for someone to start selling spaghetti that's like 10 meters long so I can just cook one long spaghetti noodle and that's the whole meal",
+		      "walking around everything's in Dutch but I don't speak Dutch kind of feels like all the signs are just Lorem Ipsum",
+		      "I feel like &ldquo;Green Eggs and Ham&rdquo; is not a good text when it comes to learning healthy boundaries and consent",
+		      "man the 1970s had so many wired and disgusting foods like broccoli lime jello salad with miracle whip 7up Velveeta frosting it's really no wonder there were so many serial killers back then",
+		      "tune in tomorrow for the continuing chronicles of Kevin the Turkey",
+		      "you know I really don't need to waste my time judging you because you already judge yourself constantly and that job is already taken care of!",
+		      "go forth my merry sewing friends!<br><br>give yourself the pockets you deserve!",
+		      "I move to the Netherlands and now the Dutch military is giving me targeted ads to join their computer programming division",
 		      "YOU FOOL! LOOK WHAT YOU'VE DONE!",
 		      "you say you don't like communism and yet you support the institution of marriage???",
 		      "whenever I hear a bell sound I think of Ivan Pavlov",
@@ -895,13 +965,16 @@
 		<b>Recent Activity</b>
 	</p>
 	<p>
+		<a href="https://ewonrael.github.io/fluxus">Fluxus Game for Two</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/AI-Tweets">AI Generated Tweets</a>
 	</p>
 	<p>
-		<a href="https://ewonrael.github.io/Playlist/HisRockingHorseRanAway.html">Playlist Concept</a>
+		<a href="https://cowboycollective.cc/">The Cowboy Collective</a>
 	</p>
 	<p>
-		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
+		<a href="https://ewonrael.github.io/Playlist/HisRockingHorseRanAway.html">Playlist Concept</a>
 	</p>
 	<br><br>
 	<p>
@@ -1004,6 +1077,12 @@
 		<a href="https://ewonrael.github.io/whatisarttoyou">Art According to Tinder</a>
 	</p>
 	<p>
+		<a href="https://cowboycollective.cc/">The Cowboy Collective</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.github.io/fluxus">Fluxus Game for Two</a>
+	</p>
+	<p>
 		<a href="https://goo.gl/FaUzwX">The Incomplete Works of Dr. Earl</a>
 	</p>
 	<p>
@@ -1025,7 +1104,10 @@
 		<a href="https://drive.google.com/uc?export=download&id=0B2aVNwXBM6rCSVd6eG5ScndXQzA">Realizations of Incomprehensible Music Movement I</a>
 	</p>
 	<p>
-		<a href="https://drive.google.com/uc?export=download&id=0B2aVNwXBM6rCa3hITnV0eE5RVVU">Realizations of Incomprehensible Music Movement II</a>
+		<a href="https://ewonrael.github.io/Sarabande/index.html">Sarabande</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
