--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "if under means below than der means above",
 		      "just because you're right doesn't mean I'm happy about it",
 		      "y'all ever drink fresh squeezed orange juice and think maybe there is a god and hope that maybe you'll find salvation and on that day your veins will flow with orange juice?",
 		      "I always like to ignore microwave the first time it does it's round of beeping, that way when it goes to the second round of beeping I feel very needed and wanted",
@@ -973,15 +974,12 @@
 	<p>
 		<a href="https://cowboycollective.cc/">The Cowboy Collective</a>
 	</p>
-	<p>
-		<a href="https://ewonrael.github.io/Playlist/HisRockingHorseRanAway.html">Playlist Concept</a>
-	</p>
 	<br><br>
 	<p>
 		<b>Useful Links</b>
 	</p>
 	<p>
-		<a href="https://www.paypal.me/EwonRael">Give Me Money</a>
+		<a href="https://www.patreon.com/EwonRael">Give Me Money</a>
 	</p>
 	<p>
 		<a href="mailto:EwonRael@yahoo.com">Email Me</a>
