--- a/mop/wikipedia.html
+++ b/mop/wikipedia.html
@@ -8,12 +8,16 @@
   </head>
   <body>
     <h1 id="head">Gallery of Wikipedia Nudes</h1>
+    <div class="galout">
+    <div class="galone">
     <div class="galinner">
-       <img src="resource/hatMan.jpg">
+       <a href="hatMan.html"><img src="resource/hatMan.jpg"></a>
        <img src="resource/pregnantWoman.jpg">
        <img src="resource/blowjob.jpg">
        <img class="wide" src="resource/bra.jpg">
        <img class="wide" src="resource/penis.jpg">
     </div>
+    </div>
+  </div>
   </body>
 </html>
