--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Owen Earl Official Site</title>
 	<link rel="stylesheet" href="https://indestructibletype.com/fonts/fonts.css" type="text/css" charset="utf-8" />
     	<link rel="stylesheet" href="style.css"/>
+        <meta name=viewport content="width=device-width, initial-scale=1">
   </head>
   <body>
 	<h1>Owen Earl</h1>
